test/files/neg/t8534b.scala
object Test {
  def foo = ""
  type T = foo.type#Foo
}
